doc/custom.scss
/*-- scss:defaults --*/

$toc-color: #FF4222;
$toc-active-border: #FF4222;

/*-- scss:rules --*/

#TOC {
    margin-top: 2em;
}

a:hover {
    color: #FF4222;
    text-decoration: none;
}

div.sourceCode {
    margin: 1em 0 2em 0;
}

.quarto-title {
    margin: 1.5em 0 1em 0;

    h1 {
        font-size: 2.5rem;
    }
}

code {
    color: #787109;
}

.cell-output {

    &>p>img,
    &>p>svg,
    .figure {
        display: block;
        margin: 0 auto 3em auto;
    }

    .figure {
        width: fit-content
    }
}

/* fira-mono-regular - latin */
@font-face {
    font-family: 'Fira Mono';
    font-style: normal;
    font-weight: 400;
    src: local(''),
        url('fonts/fira-mono-v12-latin-regular.woff2') format('woff2')
}

/* fira-mono-500 - latin */
@font-face {
    font-family: 'Fira Mono';
    font-style: normal;
    font-weight: 500;
    src: local(''),
        url('fonts/fira-mono-v12-latin-500.woff2') format('woff2')
}

/* fira-mono-700 - latin */
@font-face {
    font-family: 'Fira Mono';
    font-style: normal;
    font-weight: 700;
    src: local(''),
        url('fonts/fira-mono-v12-latin-700.woff2') format('woff2')
}

